--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.1",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
+    "jspdf": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
